# lictool_test

./: .copier-answers.yml  .gitignore  .license-tools-config.json  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
LICENSES/: Apache-2.0.txt
src/lictool_test/: __init__.py
src/lictool_test/empty_package/: __init__.py
